<resources>
    <string name="app_name">Cinepolis_APP</string>
    <string name="cine_logo">Cine_logo</string>
    <string name="low_style">LowStyle</string>
    <string name="logo_login">LogoLogin</string>
    <string name="ingresar">Ingresar</string>
    <string name="correo">Correo electrónico</string>
    <string name="contraseña">Contraseña</string>
    <string name="correoej">nombre@usuario.com</string>
    <string name="iniciar">Iniciar sesión</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="cine">Cinépolis</string>
    <string-array name="estado_vacunacion">
        <item>Ninguna</item>
        <item>Incompleto</item>
        <item>Completo</item>
    </string-array>
</resources>